--- a/css/header.css
+++ b/css/header.css
@@ -1,242 +1,121 @@
-* {
-    margin:0;
-    padding:0;
-  }
-  body {
-    background-color:#0088ff;
-    font-family: 'Raleway', sans-serif;
-  }
-  #ribbon {
-    position:absolute;
-    background-color:red;
-    color:white;
-    top:40px;
-    left:-30px;
-    width:160px;
-    transform:rotate(-45deg);
-    text-align:center;
-  }
-  #container {
-    position:relative;
-    width:80%;
-    margin:5% auto;
-    background-color:black;
-    box-shadow: -2px -2px 5px white,2px -2px 5px white;
-  }
-  #container > nav {
-    width:100%;
-    display:flex;
-    max-height:60px;
-  }
-  #logo {
-    line-height:60px;
-    font-size:30px;
-    padding: 0 50px;
-    color: white;
-    width:40%;
-    letter-spacing:2px;
-    text-shadow:2px 2px 5px;
-  }
-  #container > nav > ul {
-    margin:0;
-    padding:0;
-    list-style-type:none;
-    display:flex;
-    position:absolute;
-      right:50px;
-  /*   min-width:60%; */
-  }
-  #container > nav > ul > li {
-    line-height:60px;
-    margin: 0 0px;
-    padding:0;
-    text-align:center;
-    display:inline-block;
-    
-  /*   background-color:green; */
-    min-width:120px;
-  
-  } 
-  #container > nav > ul > li > a {
-    position:relative;
-  /*   background-color:red; */
-    margin: 0 20px;
-      color:white;
-  }
-  #container > nav > ul > li:hover {
-    border-bottom: 2px solid white;
-    background-color: #0088ff;
-  }
-  #container > nav > ul > .dropdown:hover {
-    border-bottom:none;
-  }
-  #container > nav > ul > .dropdown:hover >  .dd
-  {
-    display:block;
-  }
-  .dropdown:hover > a .fa-caret-down {
-    display:none;
-  }
-  a {
-    text-decoration:none;
-  
-  }
-  
-  #container > nav > ul > li > div {
-    position:absolute;
-    padding: 0 10px;
-    
-    background-color:black;
-    display:none;
-    background-color:aliceblue;
-    min-width:100px;
-  }
-  
-  #container > nav > ul > li > div > ul {
-    margin:0px 0 10px 0;
-    padding:0;
-    list-style:none;
-  }
-  #u_a_c {
-    position:relative;
-    width:100%;
-  /*   background-color:red; */
-  }
-  #up_arrow {
-    position:relative;
-    width:20px;
-    height:20px;
-    left:42%;
-    top:-10px;
-    background-color:aliceblue;
-    transform:rotate(45deg);
-  }
-  #container > nav > ul > li> div > ul > li:hover {
-    background-color:rgba(0,0,0,0.2);
-  }
-  #container > nav > ul > li > div > ul > li > a {
-    padding : 5px;
-      color:black;
-  }
-  
-  * {
-    margin:0;
-    padding:0;
-  }
-  body {
-    background-color:#0088ff;
-    font-family: 'Raleway', sans-serif;
-  }
-  #ribbon {
-    position:absolute;
-    background-color:red;
-    color:white;
-    top:40px;
-    left:-30px;
-    width:160px;
-    transform:rotate(-45deg);
-    text-align:center;
-  }
-  #container {
-    position:relative;
-    width:80%;
-    margin:5% auto;
-    background-color:black;
-    box-shadow: -2px -2px 5px white,2px -2px 5px white;
-  }
-  #container > nav {
-    width:100%;
-    display:flex;
-    max-height:60px;
-  }
-  #logo {
-    line-height:60px;
-    font-size:30px;
-    padding: 0 50px;
-    color: white;
-    width:40%;
-    letter-spacing:2px;
-    text-shadow:2px 2px 5px;
-  }
-  #container > nav > ul {
-    margin:0;
-    padding:0;
-    list-style-type:none;
-    display:flex;
-    position:absolute;
-      right:50px;
-  /*   min-width:60%; */
-  }
-  #container > nav > ul > li {
-    line-height:60px;
-    margin: 0 0px;
-    padding:0;
-    text-align:center;
-    display:inline-block;
-    
-  /*   background-color:green; */
-    min-width:120px;
-  
-  } 
-  #container > nav > ul > li > a {
-    position:relative;
-  /*   background-color:red; */
-    margin: 0 20px;
-      color:white;
-  }
-  #container > nav > ul > li:hover {
-    border-bottom: 2px solid white;
-    background-color: #0088ff;
-  }
-  #container > nav > ul > .dropdown:hover {
-    border-bottom:none;
-  }
-  #container > nav > ul > .dropdown:hover >  .dd
-  {
-    display:block;
-  }
-  .dropdown:hover > a .fa-caret-down {
-    display:none;
-  }
-  a {
-    text-decoration:none;
-  
-  }
-  
-  #container > nav > ul > li > div {
-    position:absolute;
-    padding: 0 10px;
-    
-    background-color:black;
-    display:none;
-    background-color:aliceblue;
-    min-width:100px;
-  }
-  
-  #container > nav > ul > li > div > ul {
-    margin:0px 0 10px 0;
-    padding:0;
-    list-style:none;
-  }
-  #u_a_c {
-    position:relative;
-    width:100%;
-  /*   background-color:red; */
-  }
-  #up_arrow {
-    position:relative;
-    width:20px;
-    height:20px;
-    left:42%;
-    top:-10px;
-    background-color:aliceblue;
-    transform:rotate(45deg);
-  }
-  #container > nav > ul > li> div > ul > li:hover {
-    background-color:rgba(0,0,0,0.2);
-  }
-  #container > nav > ul > li > div > ul > li > a {
-    padding : 5px;
-      color:black;
-  }
-  
+/* Navbar container */
+.navbarC {
+  overflow: hidden;
+  background-color: #333;
+  font-family: Arial;
+}
+
+/* Links inside the navbar */
+.navbarC a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* The dropdown container */
+.dropdownC {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdownC .dropbtnC {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbarC a:hover, .dropdownC:hover .dropbtnC {
+  background-color: red;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-contentC {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-contentC a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-contentC a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdownC:hover .dropdown-contentC {
+  display: block;
+}
+
+.dropdownD {
+  float: right;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdownD .dropbtnD {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 46px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbarC a:hover, .dropdownD:hover .dropbtnD {
+  background-color: red;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-contentD {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-contentD a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-contentD a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdownD:hover .dropdown-contentD {
+  display: block;
+}
